# mcp-zenml

./: .dockerignore  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE.md  manifest.json  pyproject.toml  requirements.in  requirements.txt  run-zenml.sh  server.json  zenml_server.py
.github/: dependabot.yml  zizmor.yml
.github/workflows/: docker-publish.yml  mcp-smoke-test.yml  pr-test.yml  release-docker.yml  release.yml  zizmor.yml
scripts/: build_mcpb.sh  bump_version.py  check_pep723_requirements.py  format.sh  generate_manifest_fields.py  test_analytics.py  test_datetime_normalization.py  test_mcp_server.py
server/: analytics.py  zenml_mcp_analytics.py  zenml_server.py
server/ui/pipeline-runs/: index.html
server/ui/run-activity-chart/: index.html
